fixed horizontal scrollbar problem

--- a/src/components/Home/HomeHeader/HomeHeader.scss
+++ b/src/components/Home/HomeHeader/HomeHeader.scss
@@ -1,10 +1,10 @@
-.header {
+.home-header {
     position: relative;
-    width: 100vw;
+    width: 100%;
     height: 100vh;
 }
 
-.header::after {
+.home-header::after {
     content: '';
     position: absolute;
     top: 0;
