--- a/src/components/Home/HomeHeader/HomeHeaderContent/HeaderContent.scss
+++ b/src/components/Home/HomeHeader/HomeHeaderContent/HeaderContent.scss
@@ -4,11 +4,10 @@
     position: absolute;
     z-index: 2;
     bottom: 0;
-    left: 0;
+    left: $header-side-padding;
     color: #ffffff;
     margin-bottom: 5em;
     font-size: 2.5rem;
-    padding: 0 $header-side-padding;
 
     p {
         font-size: 1.5rem;
@@ -21,7 +20,7 @@
         margin-bottom: 0.5em;
     }
 
-    a {
+    & .link {
         outline: none;
         text-decoration: none;
         color: #ffffff;
@@ -33,7 +32,7 @@
         border-radius: 1em;
     }
     
-    a:hover, a:focus {
+    & .link:hover, & .link:focus {
         background-color: #202020;
     }
 }
